<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <EditText
        android:id="@+id/editTextKey"
        android:layout_width="208dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/text_edit_key"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchDefaultKey" />

    <Switch
        android:id="@+id/switchDefaultKey"
        android:layout_width="208dp"
        android:layout_height="36dp"
        android:showText="false"
        android:text="@string/text_key"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:text="@string/title_decrypt"
        android:textOff="@string/title_decrypt"
        android:textOn="@string/title_encrypt"
        app:layout_constraintBottom_toTopOf="@+id/switchDefaultKey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonUploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_file"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/formatTextView" />

    <RadioGroup
        android:id="@+id/formatRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/docxRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="docx" />

        <RadioButton
            android:id="@+id/txtRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="txt" />

        <RadioButton
            android:id="@+id/stringRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/none_format_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/formatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_text"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextKey" />

    <Button
        android:id="@+id/buttonSendRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_decrypt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceEitText" />

    <EditText
        android:id="@+id/sourceEitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextKey" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/sourceEitText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formatTextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toStartOf="@+id/formatTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextKey"
        app:layout_constraintVertical_bias="0.443" />

</androidx.constraintlayout.widget.ConstraintLayout>